# Karen

./: AGENTS.md  README.md  pyproject.toml
.superpowers/sdd/: final-review-fix-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md
companion_bot/: __init__.py  config.py  http.py  llm.py  memory.py  telegram_gateway.py
companion_bot/services/: __init__.py  chat.py  memory.py
docs/: architecture.md
docs/superpowers/plans/: 2026-06-22-deepseek-llm-connectivity.md  2026-06-22-llm-fallback-diagnostics.md  2026-06-22-task-2-memory-service.md  2026-06-22-telegram-http-rest-multiservice.md  2026-06-24-ac-memory-migration.md
docs/superpowers/specs/: 2026-06-22-deepseek-llm-connectivity-design.md  2026-06-22-llm-fallback-diagnostics-design.md  2026-06-22-telegram-http-rest-multiservice-design.md  2026-06-24-ac-memory-migration-design.md
tests/: test_chat_service.py  test_config.py  test_llm.py  test_memory_domain.py  test_memory_service.py  test_telegram_gateway.py
