[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "companion-bot"
version = "0.1.0"
description = "Emotionally supportive companion chatbot services."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "httpx>=0.27,<1.0",
    "python-telegram-bot>=21,<22",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1.0",
    "respx>=0.21,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["companion_bot", "companion_bot.services"]
